# kexplo-pytemplate

./: Makefile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.package_name}}/: .gitignore  pyproject.toml
{{cookiecutter.project_name}}/: LICENSE  Makefile  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __main__.py
