[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
ptpython = "^3.0.7"
flake8 = "^3.8.4"
flake8-import-order = "^0.18.1"
flake8-pytest-style = "^1.3.0"
flake8-logging-format = "^0.6.0"
flake8-comprehensions = "^3.3.0"
flake8-builtins = "^1.5.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
pep8-naming = "^0.11.1"
pytest = "^6.2.1"

[tool.poetry.scripts]
{{cookiecutter.package_name}} = '{{cookiecutter.package_name}}.__init__:run_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
