[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "*"
isort = "*"
black = "*"
mypy = "*"
ptpython = "3.*"
flake8 = "*"
flake8-import-order = "*"
flake8-pytest-style = "*"
flake8-logging-format = "*"
flake8-comprehensions = "*"
flake8-builtins = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
pep8-naming = "*"
pytest = "6.*"

[tool.isort]
profile = "google"
force_single_line = "False"

[tool.autopep8]
max_line_length = 79

[tool.poetry.scripts]
{{cookiecutter.project_name}} = '{{cookiecutter.package_name}}.__main__:run_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
