[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "*"
isort = "*"
black = "*"
mypy = "*"
ptpython = "3.*"
pytest = "6.*"
ruff = "*"

[tool.isort]
profile = "google"
force_single_line = "False"
line_length = 160

[tool.autopep8]
max_line_length = 160

[tool.ruff]
line-length = 160

[tool.black]
line-length = 160

[tool.poetry.scripts]
{{cookiecutter.project_name}} = '{{cookiecutter.package_name}}.__main__:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
